# Urban_Point_Cloud_Sidewalk_Width_neo

./: .gitignore  Dockerfile  Improvement.md  README.md  config.py  pyproject.toml  run_pipeline.py  setup_paths.py
scripts/: 0__Get_AHN_tiles.py  1__AHN_processing.py  2__Ground_and_Road_fusion.py  3__Extract_2D_obstacles.py  4__Height_estimation.py  pc_2__Ground_and_Road_fusion.py
src/utils/: ahn_fuser.py  ahn_utils.py  analysis_tools.py  bgt_fuser.py  bgt_utils.py  clipping_tools.py  curb_utils.py  get_ahn_tiles.py  labels.py  las_utils.py  obstacles_utils.py  pipeline.py
