[project]
name = "pointcloud-labeling"
version = "0.1.0"
description = "Point-cloud labeling pipeline: AHN surface grids + BGT road fusion"
requires-python = ">=3.11"
dependencies = [
    "aiofiles",
    "aiohttp",
    "alphashape",
    "geopandas>=0.14",
    "laspy[laszip]",
    "numba",
    "numpy",
    "pyproj",
    "scipy",
    "shapely>=2.0",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config.py"]
only-include = ["src", "config.py"]
